--- a/myshop/shop/templates/shop/base.html
+++ b/myshop/shop/templates/shop/base.html
@@ -14,6 +14,9 @@
         <div class="cart">
             Koszyk jest pusty.
         </div>
+        <div class="login">
+            Logowanie
+        </div>
     </div>
     <div id="content">
         {% block content %}
