--- a/myshop/shop/templates/shop/product/detail.html
+++ b/myshop/shop/templates/shop/product/detail.html
@@ -9,9 +9,11 @@
     <div class="product-detail">
         <img src="{% if product.image %}{{ product.image.url }}{% else %}"
              {% static "img/no_image.png" %}{% endif %}>
-        <h1>{{ product.name }}</h1>
-        <h2><a href="{% url 'product-category' %}">{{ product.category }}</a></h2>
-        <p class="price">{{ product.price }} zł</p>
+        <h1>Category: {{ product.name }}</h1>
+        <h2><a href="{% url 'product-list-category' product.slug %}">{{ product.category }}</a></h2>
+        <p>Sex: {{ product.sex }}</p>
+        <p>Size: {{ product.size }}</p>
+        <p class="price">Price: {{ product.price }} zł</p> Description:
             {{ product.description|linebreaks }}
     </div>
 {% endblock %}
