--- a/myshop/shop/templates/shop/product/list.html
+++ b/myshop/shop/templates/shop/product/list.html
@@ -1,4 +1,4 @@
-{% extends "myshop/base.html" %}
+{% extends "shop/base.html" %}
 {% load static %}
 
 {% block title %}
@@ -7,26 +7,26 @@
 
 {% block content %}
     <div id="sidebar">
-        <h5>Categories</h5>
+        <h1>Categories</h1>
         <ul>
             <li {% if not category %} class="selected"{% endif %}>
-                <a href="{% url "myshop:product-list" %}">Everything</a>
+                <a href="{% url "product-list" %}">All Products</a>
             </li>
             {% for c in categories %}
                 <li {% if category.slug == c.slug %} class="selected"{% endif %}>
-                    <a href="{% url 'product-list-category' %}">{{ c.name }}</a>
+                    <a href="{% url 'product-list-category' c.slug %}">{{ c.name }}</a>
                 </li>
             {% endfor %}
         </ul>
     </div>
     <div id="main" class="product-list">
-        <h1>{% if category %}{{ category.name }} {% else %}Products{% endif %}</h1>
+        <h3>{% if category %}{{ category.name }} {% else %}Products{% endif %}</h3>
         {% for product in products %}
             <div class="item">
-                <a href="{% url 'product-detail' %}">
+                <a href="{% url 'product-detail' product.id product.slug %}">
                     <img src="{% if product.image %}{{ product.image.url }} {% else %} {% static "img/no_image.png" %} {% endif %}">
                 </a>
-                <a href="{% url 'product-detail' %}">{{ product.name }}</a><br>
+                <a href="{% url 'product-detail' product.id product.slug %}">{{ product.name }}</a><br>
                 {{ product.price }} zł
             </div>
         {% endfor %}
