--- a/myshop/shop/templates/shop/cart/detail.html
+++ b/myshop/shop/templates/shop/cart/detail.html
@@ -1,10 +1,56 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'shop/base.html' %}
+{% load static %}
 
-</body>
-</html>
+{% block title %}
+Koszyk na zakupy
+{% endblock %}
+
+{% block content %}
+<h1>Koszyk na zakupy</h1>
+    <table class="cart">
+        <thead>
+            <tr>
+                <th>Picture</th>
+                <th>Product</th>
+                <th>Quantity</th>
+                <th>Price</th>
+                <th>Total price</th>
+                <th>Delete</th>
+            </tr>
+        </thead>
+    <tbody>
+        {% for item in cart %}
+    {% with product=item.product %}
+        <tr>
+            <td>
+                <a href="{% url 'cart-detail' %}">
+                    <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static "img/no_image.png" %}{% endif %}">
+                </a>
+            </td>
+            <td>{{ product.name }}</td>
+            <td>
+                <form action="{% url 'cart-add' product.id %}" method="post">
+                    {{ item.update_quantity_form.quantity }}
+                    {{ item.update_quantity_form.update }}
+                    <input type="submit" value="Change">
+                    {% csrf_token %}
+                </form>
+            </td>
+            <td><a href="{% url 'cart-remove' product.id %}">Delete</a></td>
+            <td class="num">{{ item.price }} zł</td>
+            <td class="num">{{ item.total_price }} zł</td>
+        </tr>
+        {% endwith %}
+    {% endfor %}
+    <tr class="total">
+        <td>Total Price</td>
+        <td colspan="4"></td>
+        <td class="num">{{ cart.get_total_price }} zł</td>
+    </tr>
+    </tbody>
+    </table>
+    <p class="text-rigt">
+        <a href="{% url 'product-list' %}" class="button light">Continue your purchases</a>
+        <a href="#" class="button">To cash</a>
+    </p>
+{% endblock %}
