--- a/myshop/shop/templates/shop/base.html
+++ b/myshop/shop/templates/shop/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="header">
-        <a href="{% url 'product-list' %}" class="logo">My mini shop</a>
+        <a href="{% url 'home' %}" class="logo">My mini shop</a>
     </div>
     <div id="subheader">
         <div class="cart">
