--- a/myshop/shop/templates/shop/product/detail.html
+++ b/myshop/shop/templates/shop/product/detail.html
@@ -8,7 +8,7 @@
 {% block content %}
     <div class="product-detail">
         <img src="{% if product.image %}{{ product.image.url }}{% else %}"
-             {% static "img/no_image.png" %}{% endif %}>
+             {% static "media/no_image.png" %}{% endif %}>
         <h1>Category: {{ product.name }}</h1>
         <h2><a href="{% url 'category-list' %}">{{ product.category }}</a></h2>
         <p>Sex: {{ product.sex }}</p>
