--- a/myshop/shop/templates/shop/category/category_view.html
+++ b/myshop/shop/templates/shop/category/category_view.html
@@ -7,7 +7,7 @@
         <ul>
             {% for c in categories %}
                 <li class="selected">
-                    <a href="{% url 'category-detail' c.slug %}">{{ c.name }}</a>
+                    <a href="{% url 'category-detail' c.id %}">{{ c.name }}</a>
                 </li>
             {% endfor %}
         </ul>
