--- a/myshop/shop/templates/shop/index.html
+++ b/myshop/shop/templates/shop/index.html
@@ -1,4 +1,3 @@
-
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -12,6 +11,7 @@
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Charmonman:400,700|Open+Sans:400,600,700&amp;subset=latin-ext"
         rel="stylesheet">
+    <link rel="stylesheet" href="{% static "css/style.css" %}">
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
 </head>
@@ -55,14 +55,6 @@
                         <div class="carousel-caption d-block">
                             <h1>{{ three_products.1.name }}</h1>
                             <h3> {{ three_products.1.description}}</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="container w-75 d-flex">
-                        <div class="carousel-caption d-block">
-                            <h1>{{ three_products.2.name }}</h1>
-                            <h3> {{ three_products.2.description}}</h3>
                         </div>
                     </div>
                 </div>
