--- a/myshop/shop/templates/shop/order/created_order.html
+++ b/myshop/shop/templates/shop/order/created_order.html
@@ -6,5 +6,5 @@ Thank you
 
 {% block content %}
 <h1>Thank you so much!!!!</h1>
-<p>The order has been placed and its number is<strong>{{ order.id }}</strong></p>
+<p>The order has been completed and its number is <strong>{{ order.id }}</strong></p>
 {% endblock %}
