--- a/myshop/shop/templates/shop/product/list.html
+++ b/myshop/shop/templates/shop/product/list.html
@@ -12,7 +12,7 @@
         {% for product in page_obj %}
             <div class="item">
                 <a href="{% url 'product-detail' product.id product.slug %}">
-                    <img src="{% if product.image %}{{ product.image.url }} {% else %} {% static "no_image.png" %} {% endif %}">
+                    <img src="{% if product.image %}{{ product.image.url }} {% else %} {% static "img/no_image.png" %} {% endif %}">
                 </a>
                 <a href="{% url 'product-detail' product.id product.slug %}">{{ product.name }}</a><br>
                 {{ product.price }} zł
