--- a/myshop/shop/templates/shop/category/category_products.html
+++ b/myshop/shop/templates/shop/category/category_products.html
@@ -2,13 +2,14 @@
 {% load static %}
 
 {% block content %}
-    <div id="sidebar">
-        <h1>Categories: {{ category_slug.name }}</h1>
+    <div id="sidebar"><h1>Category:
+        <strong>{{ categories_id.name }}</strong>
+    </h1>
         <ul>
             {% for product in products_category %}
                 <li class="selected">
                 <a href="{% url 'product-detail' product.id product.slug %}">
-                    <img src="{% if product.image %}{{ product.image.url }} {% else %} {% static "no_image.png" %} {% endif %}"></a>
+                    <img src="{% if product.image %}{{ product.image.url }} {% else %} {% static "img/no_image.png" %} {% endif %}"></a>
                     <a href="{% url 'product-detail' product.id product.slug %}">{{ product.name }}</a>
                 </li>
             {% endfor %}
