--- a/myshop/shop/templates/shop/product/detail.html
+++ b/myshop/shop/templates/shop/product/detail.html
@@ -7,10 +7,10 @@
 
 {% block content %}
     <div class="product-detail">
-        <img src="{% if product.image %}{{ product.image.url }}{% else %}"
-             {% static "no_image.png" %}{% endif %}>
-        <h1>Category: {{ product.name }}</h1>
-        <h2><a href="{% url 'category-list' %}">{{ product.category }}</a></h2>
+        <h1>Category: <a href="{% url 'category-detail' product.category.id %}">{{ product.category }}</a></h1>
+        <img src="{% if product.image %}{{ product.image.url }} {% else %} {% static "img/no_image.png" %} {% endif %}">
+
+        <h2></h2>
         <p>Sex: {{ product.sex }}</p>
         <p>Size: {{ product.size }}</p>
         <p class="price">Price: {{ product.price }} zł</p> Description:
