--- a/myshop/shop/templates/shop/base.html
+++ b/myshop/shop/templates/shop/base.html
@@ -47,6 +47,9 @@
         <div>
             <h3><a href="{% url 'product-list' %}">Return to all products</a></h3>
         </div>
+        <div>
+            <h3><a href="{% url 'search-products' %}">Search products</a></h3>
+        </div>
     </div>
     <div id="content">
         {% block content %}
