--- a/myshop/shop/templates/shop/product/search_product.html
+++ b/myshop/shop/templates/shop/product/search_product.html
@@ -1,4 +1,5 @@
 {% extends "shop/base.html" %}
+{% load static %}
 
 {% block content %}
 <h2>Search products:</h2>
@@ -9,10 +10,10 @@
 </form>
 
 {% for product in list_of_products %}
-<li><a href="{% url 'product-detail' product.id product.slug %}">
-    <img src="{% if product.image %}{{ product.image.url }} {% else %} {% static "img/no_image.png" %}{% endif %}">
+    <li><a href="{% url 'product-detail' product.id product.slug %}">
+        <img src="{% if product.image %}{{ product.image.url }} {% else %} {% static "img/no_image.png" %}{% endif %}">
     </a>
-    <a href="{%  url 'product-detail' product.id product.slug %}">{{ product }}</a></li>
+        <a href="{%  url 'product-detail' product.id product.slug %}">{{ product }}</a></li>
 {% empty %}
 No products
 {% endfor %}
