--- a/myshop/shop/static/css/style.css
+++ b/myshop/shop/static/css/style.css
@@ -6,7 +6,7 @@
   --light-link-color: #fffffa;
   --background-color: #4b4c4a;
   --lighter-background-color: #46d2aa;
-  --lighter-text-color: #9fa292;
+  --lighter-text-color: #adc42e;
   --dark-text: #ad5050;
   --blue: #007bff;
   --yellow: #ffc107;
