--- a/myshop/shop/templates/shop/index.html
+++ b/myshop/shop/templates/shop/index.html
@@ -7,12 +7,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Only buy</title>
 
- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Charmonman:400,700|Open+Sans:400,600,700&amp;subset=latin-ext"
         rel="stylesheet">
     <link rel="stylesheet" href="{% static "css/style.css" %}">
-     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
 
 </head>
 
@@ -47,12 +48,10 @@
                     <div class="container w-75 d-flex">
                         {% if three_products %}
                         <div class="carousel-caption d-block">
-
                             <img src="{% if three_products.image %}{{ three_products.0.image.url }}{% else %}{% static "img/no_image.png" %}{% endif %}">
                             <h1>{{ three_products.0.name}}</h1>
                         </div>
                     </div>
-
                 </div>
                 <div class="carousel-item">
                     <div class="container w-75 d-flex">
@@ -94,15 +93,15 @@
                     </ul>
                 </div>
                 <div class="col">
-                    <h3 class="mb-4">Wyszukiwarka</h3>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control border-0 rounded-0" placeholder=""
-                            aria-label="Recipient's username" aria-describedby="basic-addon2">
-                        <div class="input-group-append">
-                            <button class="input-group-text btn-color border-0 rounded-0" type="submit" id="basic-addon2"><a
-                                    href="index.html">Szukaj</a></button>
-                        </div>
-                    </div>
+{#                    <h3 class="mb-4">Wyszukiwarka</h3>#}
+{#                    <div class="input-group mb-3">#}
+{#                        <input type="text" class="form-control border-0 rounded-0" placeholder=""#}
+{#                            aria-label="Recipient's username" aria-describedby="basic-addon2">#}
+{#                        <div class="input-group-append">#}
+{#                            <button class="input-group-text btn-color border-0 rounded-0" type="submit" id="basic-addon2"><a#}
+{#                                    href="index.html">Szukaj</a></button>#}
+{#                        </div>#}
+{#                    </div>#}
                     <div class="container d-flex-row">
                         <a href="#">
                             <i class="fab fa-facebook-square mr-4 icon-social"></i>
