--- a/myshop/shop/templates/shop/payment/process.html
+++ b/myshop/shop/templates/shop/payment/process.html
@@ -1,11 +1,11 @@
 {% extends 'shop/base.html' %}
 
-{% block title %}Buy by credit cart{% endblock %}
+{% block title %}Pay by credit card{% endblock %}
 
 {% block content %}
-<h1>Buy by credit cart</h1>
-<form action="" id="payment" method="post">
-    <label for="card-number">The card number</label>
+<h1>Buy by credit card</h1>
+<form id="payment" method="post">
+    <label for="card-number">Card number</label>
     <div id="card-number" class="field"></div>
 
     <label for="cvv">CVV</label>
@@ -19,10 +19,9 @@
     <input type="submit" value="Pay">
 </form>
 <script
-    src="https://js.braintreegateway.com/web/3.29.0/js/client.min.js"></script>
-
+    src="https://js.braintreegateway.com/web/3.58.0/js/client.min.js"></script>
 <script
-    src="https://js.braintreegateway.com/web/3.29.0/js/hosted-fields.min.js"></script>
+    src="https://js.braintreegateway.com/web/3.58.0/js/hosted-fields.min.js"></script>
 <script>
     var form = document.querySelector('#payment');
     var submit = document.querySelector('input[type="submit"]');
