--- a/myshop/shop/templates/shop/order/pdf.html
+++ b/myshop/shop/templates/shop/order/pdf.html
@@ -2,12 +2,12 @@
 <body>
     <h1>My shop</h1>
         <p>
-            Recipe nr {{ order.id }}<br>
+            Invoice nr {{ order.id }}<br>
             <span class="secondary">
                 {{ order.created|date:"M d, Y" }}
             </span>
         </p>
-    <h3>Purchase</h3>
+    <h3>Bill to</h3>
     <p>
         {{ order.first_name }} {{ order.last_name }}<br>
         {{ order.email }}<br>
@@ -40,7 +40,7 @@
         </tbody>
     </table>
 <span class="{% if order.paid %}paid{% else %}pending{% endif %}">
-    {% if order.paid %}Paid{% else %}Waiting for the paying{% endif %}
+    {% if order.paid %}Paid{% else %}Pending payment{% endif %}
 </span>
 </body>
 </html>
